--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-@import 'bootstrap/dist/css/bootstrap.min.css';
-
-
 * {
   padding: 0;
   margin: 0;
@@ -8,28 +5,23 @@
 }
 
 :root {
-  --color1: #15292e;
+  --color1: #16262E; /*COLOR ANTERIOR: 15292e*/ 
   --background: #ffffff;
-  --background2: #074047;
-  --buttons: #1C8585;
+  --background2: #0e3b40;
+  --buttons: #13344e; 
   --contrast: #1DA27E;
   --text-color: #333333;
   --secondary-text: #555555;
   --border-color: #dddddd;
-  --button-hover: #12857a;
+  --button-hover: #0d3f3a;
 }
 
 body {
-  font-family: 'Arial', sans-serif;
-  background-color: var(--background);
-  color: var(--text-color);
-  line-height: 1.6;
+  height: 100vh;
 }
 
 a {
-  text-decoration: none;
-  color: var(--color1);
-  transition: color 0.3s ease;
+  text-decoration: none !important;
 }
 
 a:hover {
@@ -48,9 +40,9 @@ p {
 
 button {
   padding: 0.8rem 1.2rem;
-  background-color: var(--buttons);
+  background-color: var(--buttons) !important;
   color: white;
-  border: none;
+  border: none !important;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -72,9 +64,9 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: var(--background);
   border-bottom: 1px solid var(--border-color);
 }
+
 
 nav ul {
   display: flex;
@@ -87,12 +79,18 @@ ul button:hover {
 }
 
 nav li {
-  margin: 0 1rem;
+  margin: 0 1.3rem;
+  align-items: center;
+}
+
+li a{
+  color: var(--color1) !important;
 }
 
 .logo {
-  height: 6rem;
+  height: 4.9rem;
 }
+
 
 .home-options {
   display: flex;
@@ -100,20 +98,6 @@ nav li {
   flex-wrap: wrap;
   gap: 2rem;
   justify-content: center;
-}
-
-
-.dropdown-menu {
-  background-color: var(--background2);
-  height: auto;
-  width: min-content;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.menu-drop {
-  color: var(--background);
 }
 
 .option-card {
@@ -245,14 +229,16 @@ nav li {
   background-color: var(--back2);
   display: flex;
   justify-content: center;
-  align-items: center;
-  position: sticky;
-  height: 4rem;
+  position: relative;
+  width: 100%;
+  bottom: 0;
+  height: 2.5rem;
 }
 
 .div-footer {
-  display: flex;
   background-color: white;
+  width: 100%;
+  bottom: 0;
 }
 
 .ul-footer {
@@ -260,7 +246,6 @@ nav li {
   justify-content: center;
   grid-auto-flow: row;
   grid-gap: 24px;
-  justify-items: center;
   list-style: none;
   margin: auto;
 }
@@ -440,10 +425,44 @@ ul {
 
 /* MODO OSCURO */
 
-.dark-mode body{
+.dark-mode {
   background-color: black;
 }
 
 .dark-mode .div-footer {
-  background-color: #aecad1 !important;
+  background-color: #0a0a0a;
 }
+
+.dark-mode nav {
+  background-color: #070707;
+  border-bottom: #0a0a0a solid;
+}
+
+.dark-mode 
+.dropdown-menu {
+  background-color: black;
+}
+
+.dark-mode .menu-drop {
+  color: white;
+}
+
+.dark-mode li a{
+  color: white !important;
+}
+
+
+/* DISLEXIA */
+
+@font-face {
+  font-family: 'OpenDyslexic';
+  src: url('./fontsDislexic/OpenDyslexic-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.body-dislexia h1{
+  font-family: "OpenDyslexic", Arial, sans-serif ;
+  line-height: 1.6;
+  letter-spacing: 0.05em;
+}    
